manifests-failed/devspace-cloud-0.3.3.tgz-manifest.yaml
---
# Source: devspace-cloud/charts/cert-manager/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-cert-manager
  namespace: "devspace-cloud-0.3.3.tgz"
  labels:
    app: cert-manager
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cert-manager-v0.13.1
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9402
      targetPort: 9402
  selector:
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/instance: my-release
---
# Source: devspace-cloud/charts/nginx-ingress/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-ingress
    chart: nginx-ingress-1.33.1
    component: "controller"
    heritage: Helm
    release: my-release
  name: my-release-nginx-ingress-controller
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: nginx-ingress
    component: "controller"
    release: my-release
  type: "LoadBalancer"
---
# Source: devspace-cloud/charts/nginx-ingress/templates/default-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-ingress
    chart: nginx-ingress-1.33.1
    component: "default-backend"
    heritage: Helm
    release: my-release
  name: my-release-nginx-ingress-default-backend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: nginx-ingress
    component: "default-backend"
    release: my-release
  type: "ClusterIP"
---
# Source: devspace-cloud/templates/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devspace-auth
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: devspace-auth
---
# Source: devspace-cloud/templates/database/postgres-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devspace-postgres-headless
  labels:
    app: devspace-postgres
spec:
  clusterIP: None
  ports:
    - port: 5432
      protocol: TCP
  selector:
    app: devspace-postgres
---
# Source: devspace-cloud/templates/database/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devspace-postgres
  labels:
    app: devspace-postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: devspace-postgres
---
# Source: devspace-cloud/templates/hasura/hasura-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devspace-hasura
  name: devspace-hasura
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: devspace-hasura
---
# Source: devspace-cloud/templates/manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devspace-manager
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: devspace-manager
---
# Source: devspace-cloud/templates/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devspace-ui
spec:
  ports:
    - port: 8080
      targetPort: 5000
      protocol: TCP
  selector:
    app: devspace-ui
---
# Source: devspace-cloud/charts/cert-manager/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-cert-manager
  namespace: "devspace-cloud-0.3.3.tgz"
  labels:
    app: cert-manager
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cert-manager-v0.13.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-manager
      app.kubernetes.io/name: cert-manager
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/managed-by: Helm
  template:
    metadata:
      labels:
        app: cert-manager
        app.kubernetes.io/name: cert-manager
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: cert-manager-v0.13.1
      annotations:
        prometheus.io/path: "/metrics"
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9402'
    spec:
      serviceAccountName: default
      containers:
        - name: cert-manager
          image: "quay.io/jetstack/cert-manager-controller:v0.13.1"
          imagePullPolicy: IfNotPresent
          args:
          - --v=2
          - --cluster-resource-namespace=$(POD_NAMESPACE)
          - --leader-election-namespace=kube-system
          - --acme-http01-solver-resource-request-cpu=0
          - --acme-http01-solver-resource-request-memory=0
          - --webhook-namespace=$(POD_NAMESPACE)
          - --webhook-ca-secret=my-release-cert-manager-webhook-ca
          - --webhook-serving-secret=my-release-cert-manager-webhook-tls
          - --webhook-dns-names=my-release-cert-manager-webhook,my-release-cert-manager-webhook.devspace-cloud-0.3.3.tgz,my-release-cert-manager-webhook.devspace-cloud-0.3.3.tgz.svc
          ports:
          - containerPort: 9402
            protocol: TCP
          resources:
            {}
---
# Source: devspace-cloud/charts/nginx-ingress/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-ingress
    chart: nginx-ingress-1.33.1
    component: "controller"
    heritage: Helm
    release: my-release
  name: my-release-nginx-ingress-controller
  annotations:
    {}
spec:
  selector:
    matchLabels:
      app: nginx-ingress
      release: my-release
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    {}
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app: nginx-ingress
        component: "controller"
        release: my-release
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: nginx-ingress-controller
          image: "quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.30.0"
          imagePullPolicy: "IfNotPresent"
          args:
            - /nginx-ingress-controller
            - --default-backend-service=devspace-cloud-0.3.3.tgz/my-release-nginx-ingress-default-backend
            - --publish-service=devspace-cloud-0.3.3.tgz/my-release-nginx-ingress-controller
            - --election-id=ingress-controller-leader
            - --ingress-class=nginx
            - --configmap=devspace-cloud-0.3.3.tgz/my-release-nginx-ingress-controller
          securityContext:
            capabilities:
                drop:
                - ALL
                add:
                - NET_BIND_SERVICE
            runAsUser: 101
            allowPrivilegeEscalation: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources:
            {}
      hostNetwork: false
      serviceAccountName: my-release-nginx-ingress
      terminationGracePeriodSeconds: 60
---
# Source: devspace-cloud/charts/nginx-ingress/templates/default-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-ingress
    chart: nginx-ingress-1.33.1
    component: "default-backend"
    heritage: Helm
    release: my-release
  name: my-release-nginx-ingress-default-backend
spec:
  selector:
    matchLabels:
      app: nginx-ingress
      release: my-release
  replicas: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: nginx-ingress
        component: "default-backend"
        release: my-release
    spec:
      containers:
        - name: nginx-ingress-default-backend
          image: "k8s.gcr.io/defaultbackend-amd64:1.5"
          imagePullPolicy: "IfNotPresent"
          args:
          securityContext:
            runAsUser: 65534
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            {}
      serviceAccountName: my-release-nginx-ingress-backend
      terminationGracePeriodSeconds: 60
---
# Source: devspace-cloud/templates/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devspace-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devspace-auth
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: devspace-auth
    spec:
      serviceAccountName: devspace-default
      containers:
      - name: default
        image: "devspacecloud/auth:0.3.3"
        volumeMounts:
        - name: auth-cert-volume
          mountPath: /auth-cert
          readOnly: true
      volumes:
        - name: auth-cert-volume
          secret:
            secretName: devspace-auth-secret
            items:
            - key: tls.crt
              path: tls.crt
            - key: tls.key
              path: tls.key
---
# Source: devspace-cloud/templates/hasura/hasura-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: devspace-hasura
    hasuraService: custom
  name: devspace-hasura
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devspace-hasura
  template:
    metadata:
      labels:
        app: devspace-hasura
    spec:
      serviceAccountName: devspace-default
      containers:
      - name: hasura
        image: "devspacecloud/hasura:0.3.3"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
---
# Source: devspace-cloud/templates/manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devspace-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devspace-manager
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: devspace-manager
    spec:
      serviceAccountName: devspace-manager
      containers:
      - name: default
        image: "devspacecloud/manager:0.3.3"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
---
# Source: devspace-cloud/templates/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devspace-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devspace-ui
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: devspace-ui
    spec:
      serviceAccountName: devspace-default
      containers:
        - name: default
          image: "devspacecloud/ui:0.3.3"
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
---
# Source: devspace-cloud/templates/database/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devspace-postgres
spec:
  selector:
    matchLabels:
      app: devspace-postgres
  serviceName: devspace-postgres-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: devspace-postgres
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: devspace-default
      containers:
      - name: postgres
        image: postgres:11
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready -U "devspace" -d "devspace" -h 127.0.0.1 -p 5432
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready -U "devspace" -d "devspace" -h 127.0.0.1 -p 5432
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 6
          failureThreshold: 1
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 50Gi
---
# Source: devspace-cloud/templates/ingress/hasura-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devspace-hasura-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /v1/graphql
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "devspace.local"
    http:
      paths:
      - path: /graphql
        backend:
          serviceName: devspace-hasura
          servicePort: 8080
  tls:
  - hosts:
    - "devspace.local"
    secretName: tls-devspace-cloud
---
# Source: devspace-cloud/templates/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devspace-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "devspace.local"
    http:
      paths:
      - path: /auth
        backend:
          serviceName: devspace-auth
          servicePort: 8080
      - path: /
        backend:
          serviceName: devspace-ui
          servicePort: 8080
      - path: /v1
        backend:
          serviceName: devspace-hasura
          servicePort: 8080
      - path: /console
        backend:
          serviceName: devspace-hasura
          servicePort: 8080
  tls:
  - hosts:
    - "devspace.local"
    secretName: tls-devspace-cloud
